BDO-13 - pathlib en vez de os

--- a/Obligatorio Big Data/1-procesamiento_landing.ipynb
+++ b/Obligatorio Big Data/1-procesamiento_landing.ipynb
@@ -16,8 +16,8 @@
    "id": "44fc9374ca1ed76e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:09:19.325419Z",
-     "start_time": "2024-07-08T01:09:17.939001Z"
+     "end_time": "2024-07-08T01:24:36.009010Z",
+     "start_time": "2024-07-08T01:24:34.540364Z"
     }
    },
    "source": [
@@ -38,32 +38,32 @@
      ]
     }
    ],
-   "execution_count": 4
+   "execution_count": 10
   },
   {
    "cell_type": "code",
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:09:19.333792Z",
-     "start_time": "2024-07-08T01:09:19.329603Z"
+     "end_time": "2024-07-08T01:24:36.020449Z",
+     "start_time": "2024-07-08T01:24:36.015271Z"
     }
    },
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "\n",
     "import pandas as pd"
    ],
    "outputs": [],
-   "execution_count": 5
+   "execution_count": 11
   },
   {
    "cell_type": "code",
    "id": "53a975c31f2dc556",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:09:26.810487Z",
-     "start_time": "2024-07-08T01:09:19.335961Z"
+     "end_time": "2024-07-08T01:24:43.879092Z",
+     "start_time": "2024-07-08T01:24:36.023219Z"
     }
    },
    "source": [
@@ -87,19 +87,19 @@
     "\n",
     "\n",
     "# Directorios de las zonas landing y raw\n",
-    "directorio_landing = 'datos/landing'\n",
-    "directorio_raw = 'datos/raw'\n",
+    "directorio_landing = Path('datos/landing')\n",
+    "directorio_raw = Path('datos/raw')\n",
     "\n",
     "# Asegurarse de que el directorio de raw existe\n",
-    "os.makedirs(directorio_raw, exist_ok=True)\n",
+    "directorio_raw.mkdir(parents=True, exist_ok=True)\n",
     "\n",
     "# Verificar cada archivo en la zona de landing\n",
-    "for nombre_archivo in os.listdir(directorio_landing):\n",
-    "    ruta_archivo_landing = os.path.join(directorio_landing, nombre_archivo)\n",
+    "for ruta_archivo_landing in directorio_landing.iterdir():\n",
+    "    nombre_archivo = ruta_archivo_landing.name\n",
     "\n",
-    "    if nombre_archivo.endswith('.csv'):\n",
+    "    if ruta_archivo_landing.suffix == '.csv':\n",
     "        df = leer_csv(ruta_archivo_landing)\n",
-    "    elif nombre_archivo.endswith('.pkl'):\n",
+    "    elif ruta_archivo_landing.suffix == '.pkl':\n",
     "        df = leer_pkl(ruta_archivo_landing)\n",
     "    else:\n",
     "        print(f\"Archivo '{nombre_archivo}' ignorado. Formato no soportado.\")\n",
@@ -107,13 +107,15 @@
     "\n",
     "    if df is not None:\n",
     "        # Guardar el archivo en la zona raw\n",
-    "        ruta_archivo_raw = os.path.join(directorio_raw, nombre_archivo)\n",
+    "        ruta_archivo_raw = directorio_raw / nombre_archivo\n",
     "\n",
-    "        if nombre_archivo.endswith('.csv'):\n",
+    "        if ruta_archivo_landing.suffix == '.csv':\n",
     "            df.to_csv(ruta_archivo_raw, index=False)\n",
-    "        elif nombre_archivo.endswith('.pkl'):\n",
+    "        elif ruta_archivo_landing.suffix == '.pkl':\n",
     "            df.to_pickle(ruta_archivo_raw)\n",
-    "            df.to_csv(ruta_archivo_raw.replace('.pkl', '_from_pkl.csv'), index=False)\n",
+    "            # Guardar también como CSV, cambiando el sufijo manualmente\n",
+    "            ruta_archivo_csv = ruta_archivo_raw.with_name(ruta_archivo_raw.stem + '_from_pkl.csv')\n",
+    "            df.to_csv(ruta_archivo_csv, index=False)\n",
     "\n",
     "        print(f\"Archivo '{nombre_archivo}' guardado en la zona raw.\")\n",
     "    else:\n",
@@ -132,7 +134,7 @@
      ]
     }
    ],
-   "execution_count": 6
+   "execution_count": 12
   }
  ],
  "metadata": {
