--- a/Obligatorio Big Data/analisis_archivo_pickle.ipynb
+++ b/Obligatorio Big Data/analisis_archivo_pickle.ipynb
@@ -15,13 +15,11 @@
    "id": "83b2b6d8-ae31-4dc5-a81e-06946ea2c895",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:21.566886Z",
-     "start_time": "2024-07-07T05:26:20.291054Z"
+     "end_time": "2024-07-08T01:30:26.849234Z",
+     "start_time": "2024-07-08T01:30:25.543097Z"
     }
    },
-   "source": [
-    "%pip install numpy==1.26.4 pandas==2.2.2\n"
-   ],
+   "source": "%pip install numpy==1.26.4 pandas==2.2.2",
    "outputs": [
     {
      "name": "stdout",
@@ -44,27 +42,18 @@
    "id": "initial_id",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:22.164781Z",
-     "start_time": "2024-07-07T05:26:21.570373Z"
+     "end_time": "2024-07-08T01:30:27.430805Z",
+     "start_time": "2024-07-08T01:30:26.851788Z"
     }
    },
    "source": [
-    "import pandas as pd\n",
-    "import numpy as np\n",
+    "from pathlib import Path\n",
     "\n",
-    "print(\"numpy version:\", np.__version__)\n",
-    "print(\"pandas version:\", pd.__version__)\n"
+    "import pandas as pd\n",
+    "\n",
+    "directorio_raw = Path('datos/raw')"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "numpy version: 1.26.4\n",
-      "pandas version: 2.2.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "execution_count": 2
   },
   {
@@ -72,13 +61,13 @@
    "id": "dcfc4c320858c6cf",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:22.617123Z",
-     "start_time": "2024-07-07T05:26:22.166571Z"
+     "end_time": "2024-07-08T01:30:27.867854Z",
+     "start_time": "2024-07-08T01:30:27.433076Z"
     }
    },
    "source": [
     "# CSV olympic_results\n",
-    "df_csv = pd.read_csv('datos/landing/olympic_results.csv')\n",
+    "df_csv = pd.read_csv(directorio_raw / 'olympic_results.csv')\n",
     "df_csv"
    ],
    "outputs": [
@@ -444,13 +433,13 @@
    "id": "28ecc2de3122fb9f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:26.831030Z",
-     "start_time": "2024-07-07T05:26:22.618890Z"
+     "end_time": "2024-07-08T01:30:28.167364Z",
+     "start_time": "2024-07-08T01:30:27.870034Z"
     }
    },
    "source": [
     "# Pickle olympic_results\n",
-    "df_pkl = pd.read_pickle('datos/landing/olympic_results.pkl')\n",
+    "df_pkl = pd.read_pickle(directorio_raw / 'olympic_results.pkl')\n",
     "df_pkl"
    ],
    "outputs": [
@@ -790,8 +779,8 @@
    "id": "52a0efa4615a7046",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:26.843251Z",
-     "start_time": "2024-07-07T05:26:26.835702Z"
+     "end_time": "2024-07-08T01:30:28.175884Z",
+     "start_time": "2024-07-08T01:30:28.169533Z"
     }
    },
    "source": [
@@ -845,8 +834,8 @@
    "id": "693f90227a927b5e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:29.477463Z",
-     "start_time": "2024-07-07T05:26:26.845386Z"
+     "end_time": "2024-07-08T01:30:30.151962Z",
+     "start_time": "2024-07-08T01:30:28.177673Z"
     }
    },
    "source": [
@@ -1119,8 +1108,8 @@
    "id": "8d35c3cbdec1e0c2",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:46.017098Z",
-     "start_time": "2024-07-07T05:26:29.479306Z"
+     "end_time": "2024-07-08T01:30:47.111363Z",
+     "start_time": "2024-07-08T01:30:30.153847Z"
     }
    },
    "source": [
@@ -1402,8 +1391,8 @@
    "id": "3e13a4db53139d4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:46.185355Z",
-     "start_time": "2024-07-07T05:26:46.019242Z"
+     "end_time": "2024-07-08T01:30:47.272535Z",
+     "start_time": "2024-07-08T01:30:47.112640Z"
     }
    },
    "source": [
@@ -1418,8 +1407,8 @@
    "id": "ddc382717fa8c7ec",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:46.398532Z",
-     "start_time": "2024-07-07T05:26:46.187305Z"
+     "end_time": "2024-07-08T01:30:47.431691Z",
+     "start_time": "2024-07-08T01:30:47.273807Z"
     }
    },
    "source": [
@@ -1434,8 +1423,8 @@
    "id": "1ce33e8e940b5b15",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:26:49.137350Z",
-     "start_time": "2024-07-07T05:26:46.401857Z"
+     "end_time": "2024-07-08T01:30:50.302963Z",
+     "start_time": "2024-07-08T01:30:47.435983Z"
     }
    },
    "source": [
@@ -1709,8 +1698,8 @@
    "id": "d3d1fe401a099b8e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.653236Z",
-     "start_time": "2024-07-07T05:26:49.138941Z"
+     "end_time": "2024-07-08T01:31:06.340265Z",
+     "start_time": "2024-07-08T01:30:50.305094Z"
     }
    },
    "source": [
@@ -1992,8 +1981,8 @@
    "id": "66b08ed64871e5fb",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.882123Z",
-     "start_time": "2024-07-07T05:27:04.654871Z"
+     "end_time": "2024-07-08T01:31:06.501560Z",
+     "start_time": "2024-07-08T01:31:06.341780Z"
     }
    },
    "source": [
@@ -2011,8 +2000,8 @@
    "id": "d64f8f7c744fd15c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.900341Z",
-     "start_time": "2024-07-07T05:27:04.884147Z"
+     "end_time": "2024-07-08T01:31:06.515973Z",
+     "start_time": "2024-07-08T01:31:06.504183Z"
     }
    },
    "source": [
@@ -2030,8 +2019,8 @@
    "id": "3223dcd89969e3f1",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.915007Z",
-     "start_time": "2024-07-07T05:27:04.905545Z"
+     "end_time": "2024-07-08T01:31:06.528404Z",
+     "start_time": "2024-07-08T01:31:06.517335Z"
     }
    },
    "source": [
@@ -2131,8 +2120,8 @@
    "id": "453ef1d25eedd2e9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.925977Z",
-     "start_time": "2024-07-07T05:27:04.916621Z"
+     "end_time": "2024-07-08T01:31:06.540147Z",
+     "start_time": "2024-07-08T01:31:06.530425Z"
     }
    },
    "source": [
@@ -2231,8 +2220,8 @@
    "id": "548dfa9f14a05700",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:04.934289Z",
-     "start_time": "2024-07-07T05:27:04.927638Z"
+     "end_time": "2024-07-08T01:31:06.548605Z",
+     "start_time": "2024-07-08T01:31:06.541953Z"
     }
    },
    "source": [
@@ -2275,8 +2264,8 @@
    "id": "af74954e0449de87",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:05.901961Z",
-     "start_time": "2024-07-07T05:27:04.935887Z"
+     "end_time": "2024-07-08T01:31:07.420556Z",
+     "start_time": "2024-07-08T01:31:06.550275Z"
     }
    },
    "source": [
@@ -2361,8 +2350,8 @@
    "id": "bb1e7ec8399079b4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:05.951132Z",
-     "start_time": "2024-07-07T05:27:05.904087Z"
+     "end_time": "2024-07-08T01:31:07.461561Z",
+     "start_time": "2024-07-08T01:31:07.422038Z"
     }
    },
    "source": [
@@ -2499,8 +2488,8 @@
    "id": "eabcd2b76f9927dd",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:05.957905Z",
-     "start_time": "2024-07-07T05:27:05.953011Z"
+     "end_time": "2024-07-08T01:31:07.466767Z",
+     "start_time": "2024-07-08T01:31:07.463070Z"
     }
    },
    "source": [
@@ -2517,8 +2506,8 @@
    "id": "ce638b04424ed23b",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:05.975781Z",
-     "start_time": "2024-07-07T05:27:05.960566Z"
+     "end_time": "2024-07-08T01:31:07.482291Z",
+     "start_time": "2024-07-08T01:31:07.468494Z"
     }
    },
    "source": [
@@ -2857,8 +2846,8 @@
    "id": "44a8847e4cacf78e",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:05.993690Z",
-     "start_time": "2024-07-07T05:27:05.977775Z"
+     "end_time": "2024-07-08T01:31:07.499851Z",
+     "start_time": "2024-07-08T01:31:07.484195Z"
     }
    },
    "source": [
@@ -3196,8 +3185,8 @@
    "id": "8266ef8c886e31ef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:06.009166Z",
-     "start_time": "2024-07-07T05:27:05.996249Z"
+     "end_time": "2024-07-08T01:31:07.513204Z",
+     "start_time": "2024-07-08T01:31:07.501470Z"
     }
    },
    "source": [
@@ -3247,8 +3236,8 @@
    "id": "4ce88a4eeab58aba",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:06.019022Z",
-     "start_time": "2024-07-07T05:27:06.010827Z"
+     "end_time": "2024-07-08T01:31:07.525754Z",
+     "start_time": "2024-07-08T01:31:07.515143Z"
     }
    },
    "source": [
@@ -3382,8 +3371,8 @@
    "id": "4c6051ded07511da",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:06.030633Z",
-     "start_time": "2024-07-07T05:27:06.021015Z"
+     "end_time": "2024-07-08T01:31:07.537051Z",
+     "start_time": "2024-07-08T01:31:07.527676Z"
     }
    },
    "source": [
@@ -3525,8 +3514,8 @@
    "id": "e8e8105f1fb31026",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:06.047035Z",
-     "start_time": "2024-07-07T05:27:06.032228Z"
+     "end_time": "2024-07-08T01:31:07.554613Z",
+     "start_time": "2024-07-08T01:31:07.539299Z"
     }
    },
    "source": [
@@ -3540,8 +3529,8 @@
    "id": "4e378cca3ce244e9",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.082673Z",
-     "start_time": "2024-07-07T05:27:06.049009Z"
+     "end_time": "2024-07-08T01:31:08.399156Z",
+     "start_time": "2024-07-08T01:31:07.556117Z"
     }
    },
    "source": [
@@ -3604,8 +3593,8 @@
    "id": "5f93d47fa14f3aed",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.148422Z",
-     "start_time": "2024-07-07T05:27:07.084656Z"
+     "end_time": "2024-07-08T01:31:08.443172Z",
+     "start_time": "2024-07-08T01:31:08.400617Z"
     }
    },
    "source": [
@@ -3755,8 +3744,8 @@
    "id": "2b93af5e52be68df",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.161572Z",
-     "start_time": "2024-07-07T05:27:07.150580Z"
+     "end_time": "2024-07-08T01:31:08.457629Z",
+     "start_time": "2024-07-08T01:31:08.449730Z"
     }
    },
    "source": [
@@ -3773,8 +3762,8 @@
    "id": "d1f20e57282f7a5a",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.184716Z",
-     "start_time": "2024-07-07T05:27:07.164123Z"
+     "end_time": "2024-07-08T01:31:08.474555Z",
+     "start_time": "2024-07-08T01:31:08.459534Z"
     }
    },
    "source": [
@@ -4113,8 +4102,8 @@
    "id": "7b8ea0520eda5b88",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.214270Z",
-     "start_time": "2024-07-07T05:27:07.187255Z"
+     "end_time": "2024-07-08T01:31:08.503385Z",
+     "start_time": "2024-07-08T01:31:08.476470Z"
     }
    },
    "source": [
@@ -4460,8 +4449,8 @@
    "id": "15ec9263db2ba943",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.220906Z",
-     "start_time": "2024-07-07T05:27:07.216196Z"
+     "end_time": "2024-07-08T01:31:08.512790Z",
+     "start_time": "2024-07-08T01:31:08.508080Z"
     }
    },
    "source": [
@@ -4485,8 +4474,8 @@
    "id": "cb36ddd4b4d35732",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.288058Z",
-     "start_time": "2024-07-07T05:27:07.223485Z"
+     "end_time": "2024-07-08T01:31:08.578687Z",
+     "start_time": "2024-07-08T01:31:08.515426Z"
     }
    },
    "source": [
@@ -4511,8 +4500,8 @@
    "id": "db10c2d67d06411c",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.350993Z",
-     "start_time": "2024-07-07T05:27:07.290425Z"
+     "end_time": "2024-07-08T01:31:08.641976Z",
+     "start_time": "2024-07-08T01:31:08.580892Z"
     }
    },
    "source": [
@@ -4538,12 +4527,13 @@
    "id": "2e8de871c0ecf61f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:07.356789Z",
-     "start_time": "2024-07-07T05:27:07.352849Z"
+     "end_time": "2024-07-08T01:31:08.647702Z",
+     "start_time": "2024-07-08T01:31:08.644101Z"
     }
    },
    "source": [
     "import ast\n",
+    "\n",
     "\n",
     "def convertir_string_a_list(x):\n",
     "    \"\"\"\n",
@@ -4562,8 +4552,8 @@
    "id": "4755d3f6755ad7b4",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:08.452509Z",
-     "start_time": "2024-07-07T05:27:07.358217Z"
+     "end_time": "2024-07-08T01:31:09.310878Z",
+     "start_time": "2024-07-08T01:31:08.649111Z"
     }
    },
    "source": [
@@ -4578,8 +4568,8 @@
    "id": "e4ec0292c7a82aef",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:08.527200Z",
-     "start_time": "2024-07-07T05:27:08.454853Z"
+     "end_time": "2024-07-08T01:31:09.369646Z",
+     "start_time": "2024-07-08T01:31:09.312484Z"
     }
    },
    "source": [
@@ -4605,8 +4595,8 @@
    "id": "f9b5189ee4fd0378",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:08.535376Z",
-     "start_time": "2024-07-07T05:27:08.529767Z"
+     "end_time": "2024-07-08T01:31:09.375278Z",
+     "start_time": "2024-07-08T01:31:09.371347Z"
     }
    },
    "source": [
@@ -4620,8 +4610,8 @@
    "id": "aba99f1dcf84f737",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:08.573310Z",
-     "start_time": "2024-07-07T05:27:08.537280Z"
+     "end_time": "2024-07-08T01:31:09.401324Z",
+     "start_time": "2024-07-08T01:31:09.377385Z"
     }
    },
    "source": [
@@ -4635,8 +4625,8 @@
    "id": "3f052e5787fb0da7",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:10.191706Z",
-     "start_time": "2024-07-07T05:27:08.575623Z"
+     "end_time": "2024-07-08T01:31:10.513476Z",
+     "start_time": "2024-07-08T01:31:09.403040Z"
     }
    },
    "source": [
@@ -4680,8 +4670,8 @@
    "id": "a156bd06e971314f",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2024-07-07T05:27:10.199820Z",
-     "start_time": "2024-07-07T05:27:10.195213Z"
+     "end_time": "2024-07-08T01:31:10.518700Z",
+     "start_time": "2024-07-08T01:31:10.515588Z"
     }
    },
    "source": [
