--- a/Obligatorio Big Data/0-download_archivos.ipynb
+++ b/Obligatorio Big Data/0-download_archivos.ipynb
@@ -27,23 +27,23 @@
   {
    "cell_type": "code",
    "source": [
-    "import os\n",
+    "from pathlib import Path\n",
     "\n",
     "# Definimos el path del nuevo directorio, carpeta landing\n",
-    "new_dir_path = 'datos/landing'\n",
+    "directorio_landing = Path('datos/landing')\n",
     "\n",
-    "# Crear el directorio\n",
-    "os.makedirs(new_dir_path, exist_ok=True)"
+    "# Asegurarse de que el landing de refined existe\n",
+    "directorio_landing.mkdir(parents=True, exist_ok=True)"
    ],
    "metadata": {
     "id": "4VdBGzTctlEM",
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:08:47.927500Z",
-     "start_time": "2024-07-08T01:08:47.912310Z"
+     "end_time": "2024-07-08T01:20:26.920355Z",
+     "start_time": "2024-07-08T01:20:26.915895Z"
     }
    },
    "outputs": [],
-   "execution_count": 3
+   "execution_count": 6
   },
   {
    "cell_type": "code",
@@ -62,21 +62,21 @@
     "# Bajar cada uno de los archivos\n",
     "for url in urls:\n",
     "    # Extraer el nombre del archivo de la URL\n",
-    "    file_name = os.path.basename(url)\n",
-    "    # Definir el patch completo\n",
-    "    file_path = os.path.join(new_dir_path, file_name)\n",
+    "    file_name = Path(url).name\n",
+    "    # Definir el path completo\n",
+    "    file_path = directorio_landing / file_name\n",
     "    # Bajar el archivo de la URL\n",
     "    urllib.request.urlretrieve(url, file_path)"
    ],
    "metadata": {
     "id": "fDK7zHb2t3bt",
     "ExecuteTime": {
-     "end_time": "2024-07-08T01:09:05.839012Z",
-     "start_time": "2024-07-08T01:08:47.930729Z"
+     "end_time": "2024-07-08T01:20:37.738429Z",
+     "start_time": "2024-07-08T01:20:26.932721Z"
     }
    },
    "outputs": [],
-   "execution_count": 4
+   "execution_count": 7
   }
  ]
 }
